feat: additional updates for constant-time JCMathLib